--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-flask
-flask-cors
-face-recognition
-firebase-admin
-gunicorn
+flask==2.3.2
+flask-cors==3.0.10
+face-recognition==1.3.0
+firebase-admin==6.5.0
+gunicorn==20.1.0
