--- a/attendance_app/pubspec.yaml
+++ b/attendance_app/pubspec.yaml
@@ -43,13 +43,14 @@ dependencies:
   firebase_core: ^3.10.0
   firebase_auth: ^5.7.0
 
-  provider: ^6.1.5
+  provider: ^6.1.5+1
   get: ^4.7.2
   http: ^1.5.0
 
   table_calendar: ^3.2.0
   
   camera: ^0.11.0+2
+  dropdown_search: ^5.0.2
 
 dev_dependencies:
   flutter_test:
